--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,13 +27,10 @@
   justify-content: space-between;
   flex-wrap: wrap;
   border-bottom: 1px solid varibles.$hover_color;
+  margin: 0 -15px;
 
   > * {
-    margin-right: 15px;
-  }
-
-  :last-child {
-    margin-right: 0;
+    margin: 0 15px;
   }
 }
 
@@ -52,6 +49,11 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin: 0 -15px;
+
+  > * {
+    margin: 0 15px;
+  }
 
   &__item {
     padding-bottom: 32px;
@@ -105,13 +107,32 @@
 
 .main {
   &__title {
+    @include mixins.h-1();
+
     color: varibles.$default_color;
-    font-weight: 900;
-    font-size: 64px;
     margin-bottom: 32px;
   }
 
+  &__link {
+    background-color: varibles.$background_color;
+    padding: varibles.$link_paddings;
+    width: fit-content;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+
+  &__link:hover {
+    background-color: varibles.$active_color;
+  }
+
+  &__link--active {
+    background-color: varibles.$background_color;
+    box-shadow: 4px 4px 30px varibles.$background_color;
+  }
+
   &__description p {
+    @include mixins.h-5();
+
     color: varibles.$default_color;
     font-weight: 400;
     font-size: 24px;
