--- a/src/scss/_varibles.scss
+++ b/src/scss/_varibles.scss
@@ -4,7 +4,7 @@ $active_color: rgb(231, 20, 20);
 $social_button_color: rgba(198, 203, 205);
 $background_color: rgb(255, 67, 67);
 $background_active_color: rgb(185, 12, 12);
-$link_paddings: 28px 92px 32px;
+$link_paddings: 28px 92px;
 $facebook_color: rgb(59, 89, 152);
 $twitter_color: rgb(0, 172, 238);
 $linkedin_color: rgb(0, 119, 181);
