--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,7 +2,7 @@
 @forward './cdn';
 @forward './varibles';
 @forward './mixins';
-@forward './main';
+@forward './main/main';
 
 * {
   text-decoration: none;
