--- a/src/scss/main/header.scss
+++ b/src/scss/main/header.scss
@@ -1,85 +1,86 @@
 @use '../varibles';
 @use '../mixins';
 
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  border-bottom: 1px solid varibles.$hover_color;
-  margin: 0 -15px;
-
-  > * {
-    margin: 0 15px;
-  }
-
-  &--open-menu,
-  &--close-menu {
-    display: none;
-  }
-
-  .logo__text {
-    color: rgb(101, 105, 128);
-    font-weight: 900;
-    font-size: 24px;
-
-    &--highlited {
-      color: varibles.$default_color;
-      font-weight: 100;
-    }
-  }
-
-  .navigation-list {
+main {
+  .navigation {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    border-bottom: 1px solid varibles.$hover_color;
     margin: 0 -15px;
 
     > * {
       margin: 0 15px;
     }
 
-    &__item {
-      padding-bottom: 32px;
+    &--open-menu,
+    &--close-menu {
+      display: none;
     }
 
-    &__link {
-      @include mixins.navigation_normal();
+    .logo__text {
+      color: rgb(101, 105, 128);
+      font-weight: 900;
+      font-size: 24px;
 
-      position: relative;
-      padding: 10px 35px;
-      text-transform: uppercase;
-
-      &:hover {
+      &--highlited {
         color: varibles.$default_color;
+        font-weight: 100;
+      }
+    }
 
-        &::after {
-          @include mixins.navigation_hover();
+    .navigation-list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin: 0 -15px;
 
-          content: '';
-          position: absolute;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-        }
+      > * {
+        margin: 0 15px;
       }
 
-      &--active {
-        color: varibles.$active_color;
+      &__item {
+        padding-bottom: 32px;
+      }
 
-        &::after {
-          @include mixins.navigation_active();
+      &__link {
+        @include mixins.navigation_normal();
 
-          content: '';
-          position: absolute;
-          left: 0;
-          bottom: 0;
-          width: 100%;
+        position: relative;
+        padding: 10px 35px;
+        text-transform: uppercase;
+
+        &:hover {
+          color: varibles.$default_color;
+
+          &::after {
+            @include mixins.navigation_hover();
+
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+          }
+        }
+
+        &--active {
+          color: varibles.$active_color;
+
+          &::after {
+            @include mixins.navigation_active();
+
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+          }
         }
       }
     }
   }
 }
-
 @media all and (max-width: 320px) {
   .main {
     .navigation {
