--- a/src/scss/main/content.scss
+++ b/src/scss/main/content.scss
@@ -47,10 +47,30 @@
   }
 }
 
+@media all and (max-width: 1024px) {
+  .main {
+    .content {
+      .main {
+        &__title {
+          font-size: 48px;
+        }
+      }
+    }
+  }
+}
+
 @media all and (max-width: 320px) {
   .main {
     .content {
       .main {
+        &__title {
+          font-size: 36px;
+        }
+
+        &__description p {
+          font-size: 14px;
+        }
+
         &__link {
           padding: 20px 48px;
         }
