--- a/src/scss/main/navigation.scss
+++ b/src/scss/main/navigation.scss
@@ -1,7 +1,7 @@
 @use '../varibles';
 @use '../mixins';
 
-main {
+.main {
   .navigation {
     display: flex;
     justify-content: space-between;
@@ -81,6 +81,17 @@ main {
     }
   }
 }
+
+@media all and (max-width: 1024px) {
+  .main {
+    .navigation-list {
+      &__link {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
 @media all and (max-width: 320px) {
   .main {
     .navigation {
@@ -97,6 +108,7 @@ main {
         }
 
         &__link {
+          font-size: 13px;
           padding-left: 0;
           padding-right: 0;
         }
