added interior block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @forward './varibles';
 @forward './mixins';
 @forward './main/main';
+@forward './interior';
 @forward './social-buttons';
 @forward './footer';
 
