--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -55,34 +55,40 @@
 }
 
 @mixin card_normal {
-  border: 2px solid $default_color;
+  position: relative;
+  border: 2px solid varibles.$default_color;
+  cursor: pointer;
 }
 
 @mixin card_hover {
-  border: 2px solid $default_color;
   display: flex;
   justify-content: center;
   align-items: center;
 
   &::after {
     content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($background_color, 0.8);
+    background-color: rgba(varibles.$background_color, 0.8);
   }
 }
 
 @mixin card_active {
-  border: 2px solid $default_color;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  &::after {
+  &::before {
     content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($background_active_color, 0.8);
+    background-color: rgba(varibles.$background_active_color, 0.8);
   }
 }
 
