added donwload block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,7 @@
 @forward './mixins';
 @forward './main/main';
 @forward './interior';
+@forward './download.scss';
 @forward './social-buttons';
 @forward './footer';
 
