--- a/src/scss/_varibles.scss
+++ b/src/scss/_varibles.scss
@@ -9,3 +9,5 @@ $facebook_color: rgb(59, 89, 152);
 $twitter_color: rgb(0, 172, 238);
 $linkedin_color: rgb(0, 119, 181);
 $slider_color: rgb(92, 50, 73);
+$navigation_hover: 3px solid $hover_color;
+$navigation_active: 3px solid $active_color;
