--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -41,14 +41,6 @@
   color: varibles.$default_color;
 }
 
-@mixin navigation_hover {
-  border-bottom: 3px solid varibles.$hover_color;
-}
-
-@mixin navigation_active {
-  border-bottom: 3px solid varibles.$active_color;
-}
-
 @mixin link_normal {
   @include h-4();
   color: varibles.$default_color;
@@ -58,12 +50,6 @@
   position: relative;
   border: 2px solid varibles.$default_color;
   cursor: pointer;
-}
-
-@mixin card_hover {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   &::after {
     content: '';
@@ -73,6 +59,18 @@
     width: 100%;
     height: 100%;
     background-color: rgba(varibles.$background_color, 0.8);
+    transition: transform 0.5s ease-in-out;
+    transform: scale(0);
+  }
+}
+
+@mixin card_hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &::after {
+    transform: scale(1);
   }
 }
 
@@ -83,11 +81,7 @@
 
   &::before {
     content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    transform: scale(1);
     background-color: rgba(varibles.$background_active_color, 0.8);
   }
 }
