--- a/src/scss/interior.scss
+++ b/src/scss/interior.scss
@@ -4,16 +4,18 @@
 .interior {
   .interior-list {
     display: flex;
+    flex-wrap: wrap;
     max-width: 100vw;
 
     &__item {
-      width: 100%;
-      height: 340px;
+      width: calc(100% / 4);
       position: relative;
-
+      transition: transform 0.5s;
       @include mixins.card_normal();
 
       &:hover {
+        z-index: 1;
+        transform: scale3d(1.3, 1.3, 1.3);
         @include mixins.card_hover();
 
         .item-data {
@@ -23,6 +25,12 @@
 
       &--active {
         @include mixins.card_active();
+      }
+
+      a {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
       }
 
       .item-data {
@@ -68,8 +76,7 @@
   .interior {
     .interior-list {
       &__item {
-        height: 230px;
-
+        width: calc(100% / 2);
         .item-data {
           &__title {
             font-size: 18px;
@@ -89,15 +96,15 @@
 @media all and (max-width: 320px) {
   .interior {
     .interior-list {
-      flex-wrap: wrap;
-
       &__item {
-        width: 50%;
-        height: 144px;
-
         .item-data {
           &__title {
+            font-size: 12px;
             margin-bottom: 5px;
+          }
+
+          &__description {
+            font-size: 10px;
           }
         }
       }
