added advantages block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @forward './varibles';
 @forward './mixins';
 @forward './main/main';
+@forward './advantages.scss';
 @forward './interior';
 @forward './download.scss';
 @forward './social-buttons';
