fixed active card

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -81,7 +81,11 @@
 
   &::before {
     content: '';
-    transform: scale(1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(varibles.$background_active_color, 0.8);
   }
 }
