added slider block

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@
 @forward './advantages.scss';
 @forward './wokers.scss';
 @forward './interior';
+@forward './slider.scss';
 @forward './download.scss';
 @forward './social-buttons';
 @forward './footer';
