--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -1,8 +1,16 @@
 @use './varibles';
 @use './mixins';
 
+.slider-content {
+  width: 100vw; /* Занимает всю ширину экрана */
+  overflow: hidden; /* Убираем лишние слайды */
+}
+
+.slick-slide {
+  width: 100vw; /* Каждый слайд занимает всю ширину */
+}
+
 .slider {
-  // min-width: 0;
   overflow: hidden;
   .slick-track {
     display: flex;
