--- a/src/scss/social-buttons.scss
+++ b/src/scss/social-buttons.scss
@@ -52,6 +52,7 @@
             color: varibles.$social_button_color;
             border: 1px solid varibles.$social_button_color;
             padding: 10px 14px;
+            display: inline-block;
           }
         }
       }
