--- a/src/scss/wokers.scss
+++ b/src/scss/wokers.scss
@@ -26,7 +26,7 @@
         height: 270px;
 
         img {
-          object-fit: contain;
+          object-fit: cover;
           object-position: center;
           width: 100%;
           height: 100%;
