--- a/src/scss/interior.scss
+++ b/src/scss/interior.scss
@@ -10,12 +10,11 @@
     &__item {
       width: calc(100% / 4);
       position: relative;
-      transition: transform 0.5s;
+      // transition: transform 0.5s;
       @include mixins.card_normal();
-
       &:hover {
         z-index: 1;
-        transform: scale3d(1.3, 1.3, 1.3);
+        // transform: scale3d(1.3, 1.3, 1.3);
         @include mixins.card_hover();
 
         .item-data {
@@ -31,6 +30,14 @@
         display: inline-block;
         width: 100%;
         height: 100%;
+        overflow: hidden;
+        img {
+          transition: transform 0.7s;
+
+          &:hover {
+            transform: scale(2);
+          }
+        }
       }
 
       .item-data {
